fix: position content at the beginning of the viewport if the content does not fit into the viewport

--- a/src/app/app.css
+++ b/src/app/app.css
@@ -53,7 +53,7 @@ main {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  align-items: safe center;
 
   min-block-size: 100dvh;
 }
